# veilid

./: # Starting a Bootstrap.md  .bumpversion.cfg  .earthlyignore  .gitignore  .gitlab-ci.yml  .gitmodules  BOOTSTRAP-SETUP.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Earthfile  INSTALL.md  README-DE.md  README-JP.md  README-pt_BR.md  README.md  RELEASING.md  build_docs.bat  build_docs.sh  code_of_conduct-DE.md  code_of_conduct.md  install_linux_prerequisites.sh  setup_android.sh  setup_flutter.bat  setup_flutter.sh  setup_ios.sh  setup_linux.sh  setup_macos.sh  setup_windows.bat  unifios_install.sh  unifyos_install.sh  version_bump.sh
veilid-cli/: Cargo-macos.toml  Cargo.toml  build.rs
veilid-cli/src/: cached_text_view.rs  client_api_connection.rs  command_processor.rs  cursive_ui.rs  interactive_ui.rs  io_read_write_ui.rs  log_viewer_ui.rs  main.rs  peers_table_view.rs  settings.rs  tools.rs  ui.rs
veilid-core/: .gitignore  Cargo.toml  build.rs  ios_build.sh  run_tests.sh  run_windows_tests.bat
veilid-core/proto/: veilid.capnp  veilid_capnp.rs
veilid-core/src/: api_logger.rs  api_tracing_layer.rs  attachment_manager.rs  callback_state_machine.rs  connection_limits.rs  connection_manager.rs  connection_table.rs  core_context.rs  lease_manager.rs  lib.rs  network_connection.rs  network_manager.rs  receipt_manager.rs  veilid_api.rs  veilid_config.rs  veilid_core.rs  veilid_layer_filter.rs  veilid_rng.rs  wasm_helpers.rs
veilid-core/src/crypto/: blake3digest512.rs  byte_array_types.rs  crypto_system.rs  dh_cache.rs  envelope.rs  key.rs  mod.rs  receipt.rs  types.rs
veilid-core/src/dht/: crypto.rs  envelope.rs  key.rs  mod.rs  receipt.rs
veilid-core/src/intf/: mod.rs  table_db.rs  user_secret.rs
veilid-core/src/logging/: api_tracing_layer.rs  facilities.rs  mod.rs  veilid_layer_filter.rs
veilid-core/src/network_manager/: address_check.rs  address_filter.rs  connection_handle.rs  connection_limits.rs  connection_manager.rs  connection_table.rs  direct_boot.rs  mod.rs  network_connection.rs  receipt_manager.rs  send_data.rs  stats.rs  tasks.rs
veilid-core/src/routing_table/: bucket.rs  bucket_entry.rs  debug.rs  dial_info_entry.rs  find_nodes.rs  find_peers.rs  mod.rs  node_ref.rs  node_ref_filter.rs  privacy.rs  route_spec_store.rs  routing_domain_editor.rs  routing_domains.rs  routing_table_inner.rs  stats_accounting.rs  tasks.rs
veilid-core/src/rpc_processor/: debug.rs  destination.rs  fanout_call.rs  fanout_queue.rs  mod.rs  operation_waiter.rs  origin.rs  private_route.rs  rpc_app_call.rs  rpc_app_message.rs  rpc_cancel_tunnel.rs  rpc_complete_tunnel.rs  rpc_error.rs  rpc_find_block.rs  rpc_find_node.rs  rpc_get_value.rs  rpc_inspect_value.rs  rpc_node_info_update.rs  rpc_return_receipt.rs  rpc_route.rs  rpc_set_value.rs  rpc_signal.rs  rpc_start_tunnel.rs  rpc_status.rs  rpc_supply_block.rs  rpc_validate_dial_info.rs  rpc_value_changed.rs  rpc_watch_value.rs
veilid-core/src/storage_manager/: debug.rs  do_get_value.rs  get_value.rs  inspect_value.rs  limited_size.rs  mod.rs  record.rs  record_store.rs  record_store_limits.rs  set_value.rs  signed_value_data.rs  signed_value_descriptor.rs  storage_manager_inner.rs  value_detail.rs  value_record.rs  watch_value.rs
veilid-core/src/table_store/: mod.rs  native.rs  table_db.rs  table_store.rs  wasm.rs
veilid-core/src/tests/: mod.rs
veilid-core/src/veilid_api/: aligned_u64.rs  api.rs  debug.rs  error.rs  mod.rs  privacy.rs  routing_context.rs  serialize_helpers.rs  types.rs
veilid-core/src/xx/: async_peek_stream.rs  async_tag_lock.rs  bump_port.rs  clone_stream.rs  eventual.rs  eventual_base.rs  eventual_value.rs  eventual_value_clone.rs  ip_addr_port.rs  ip_extra.rs  log_thru.rs  mod.rs  must_join_handle.rs  must_join_single_future.rs  network_result.rs  single_future.rs  single_shot_eventual.rs  split_url.rs  tick_task.rs  timeout_or.rs  tools.rs
veilid-core/tests/: node.rs  web.rs
veilid-core/veilid-core-node/: index.js  package.json
veilid-flutter/rust/: .gitignore  Cargo.toml  build.rs  ios_build.sh  macos_build.sh
veilid-flutter/rust/src/: api.rs  bridge_generated.rs  config.rs  dart_ffi.rs  dart_isolate_wrapper.rs  dart_serialize.rs  lib.rs  (+1 more)
veilid-python/: README.md  chat.py  poetry_install.sh  pyproject.toml  update_schema.sh
veilid-python/demo/: chat.py  config.py
veilid-python/tests/: __init__.py  api.py  conftest.py  test_basic.py  test_crypto.py  test_dht.py  test_routing_context.py  test_table_db.py
veilid-python/veilid/: __init__.py  api.py  config.py  error.py  json_api.py  operations.py  state.py  types.py
veilid-python/veilid_python/: api.py  config.py  error.py  json_api.py  operations.py  request.py  state.py  types.py
veilid-server/: Cargo.toml  build.rs  perf.data.old  profile.json
veilid-server/proto/: veilid-client.capnp
veilid-server/src/: client_api.rs  client_log_channel.rs  cmdline.rs  log_safe_channel.rs  main.rs  server.rs  settings.rs  tools.rs  unix.rs  veilid_logs.rs  windows.rs
veilid-tools/: Cargo.toml  ios_build.sh  run_tests.sh  run_windows_tests.bat
veilid-tools/src/: assembly_buffer.rs  async_peek_stream.rs  async_tag_lock.rs  bump_port.rs  callback_state_machine.rs  clone_stream.rs  deferred_stream_processor.rs  eventual.rs  eventual_base.rs  eventual_value.rs  eventual_value_clone.rs  interval.rs  ip_addr_port.rs  ip_extra.rs  lib.rs  log_thru.rs  mod.rs  must_join_handle.rs  must_join_single_future.rs  mutable_future.rs  network_result.rs  random.rs  sleep.rs  spawn.rs  split_url.rs  startup_lock.rs  tick_task.rs  timeout.rs  timeout_or.rs  timestamp.rs  tools.rs  wasm.rs
veilid-tools/tests/: web.rs
veilid-wasm/: Cargo.toml  LICENSE_MIT  README.md  wasm-sourcemap.py  wasm_build.sh  wasm_setup_check.sh  wasm_test.sh
veilid-wasm/src/: js_veilid_core.rs  lib.rs  utils.rs  veilid_client_js.rs  veilid_crypto_js.rs  veilid_routing_context_js.rs  veilid_table_db_js.rs  veilid_table_js.rs  wasm_helpers.rs
veilid-wasm/tests/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts  wdio.conf.ts  web.rs
(+611 files in other folders)
