[workspace]
members = [
    "veilid-tools",
    "veilid-core",
    "veilid-server",
    "veilid-cli",
    "veilid-flutter/rust",
    "veilid-wasm",
]
exclude = ["./external"]
resolver = "2"

[patch.crates-io]
cursive = { git = "https://gitlab.com/veilid/cursive.git" }
cursive_core = { git = "https://gitlab.com/veilid/cursive.git" }

[profile.release]
opt-level = "s"
lto = true

[profile.dev.package.backtrace]
opt-level = 3
