[package]
# --- Bumpversion match - do not reorder
name = "veilid-cli"
version = "0.2.0"
# ---
authors = ["Veilid Team <contact@veilid.com>"]
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "veilid-cli"
path = "src/main.rs"

[features]
default = ["rt-tokio"]
rt-async-std = [
    "async-std",
    "veilid-tools/rt-async-std",
    "cursive/rt-async-std",
]
rt-tokio = ["tokio", "tokio-util", "veilid-tools/rt-tokio", "cursive/rt-tokio"]

[dependencies]
async-std = { version = "^1.9", features = [
    "unstable",
    "attributes",
], optional = true }
tokio = { version = "^1", features = ["full"], optional = true }
tokio-util = { version = "^0", features = ["compat"], optional = true }
async-tungstenite = { version = "^0.8" }
cursive = { version = "0.20.0", git = "https://gitlab.com/veilid/cursive.git", rev = "631dad18f0b4b246914998e8952da8abb6093bd2", default-features = false, features = [
    "crossterm",
    "toml",
    "ansi",
] }
cursive-flexi-logger-view = { version = "0.5.0", git = "https://gitlab.com/veilid/cursive-flexi-logger-view.git", rev = "16722a6f4bd93dbfb32bf5d88eaafa44fffc51a3" }
cursive_buffered_backend = { version = "0.6.1", git = "https://gitlab.com/veilid/cursive-buffered-backend.git", rev = "dd6b0276050e041d8f194cf415da5e1481f91370" }
# cursive-multiplex = "0.6.0"
# cursive_tree_view = "0.6.0"
cursive_table_view = "0.14.0"
arboard = "3.2.0"
# cursive-tabs = "0.5.0"
clap = { version = "4", features = ["derive"] }
directories = "^4"
log = "^0"
futures = "^0"
serde = "^1"
serde_derive = "^1"
parking_lot = "^0"
cfg-if = "^1"
config = { version = "^0", features = ["yaml"] }
bugsalot = { version = "0.2.2", git = "https://github.com/crioux/bugsalot.git", rev = "336a7053faadf990b9362edf5752ef34fa1f9615" }
flexi_logger = { version = "^0", features = ["use_chrono_for_offset"] }
thiserror = "^1"
crossbeam-channel = "^0"
hex = "^0"
veilid-tools = { version = "0.2.0", path = "../veilid-tools" }

json = "^0"
stop-token = { version = "^0", default-features = false }
flume = { version = "^0", features = ["async"] }
data-encoding = { version = "^2" }
indent = { version = "0.1.1" }

[dev-dependencies]
serial_test = "^0"
