[package]
# --- Bumpversion match - do not reorder
name = "veilid-server"
version = "0.3.0"
# ---
description = "Veilid Server"
authors = ["Veilid Team <contact@veilid.com>"]
license = "MPL-2.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "veilid-server"
path = "src/main.rs"

[features]
default = ["rt-tokio", "veilid-core/default", "otlp-tonic"]
default-async-std = ["rt-async-std", "veilid-core/default-async-std"]

crypto-test = ["rt-tokio", "veilid-core/crypto-test"]
crypto-test-none = ["rt-tokio", "veilid-core/crypto-test-none"]

otlp-tonic = ["opentelemetry-otlp/grpc-tonic", "opentelemetry-otlp/trace"]
otlp-grpc = ["opentelemetry-otlp/grpc-sys", "opentelemetry-otlp/trace"]

rt-async-std = [
    "veilid-core/rt-async-std",
    "async-std",
    "opentelemetry/rt-async-std",
]
rt-tokio = [
    "veilid-core/rt-tokio",
    "tokio",
    "tokio-stream",
    "tokio-util",
    "opentelemetry/rt-tokio",
    "console-subscriber",
]
tracking = ["veilid-core/tracking"]
debug-json-api = []

[dependencies]
veilid-core = { path = "../veilid-core", default-features = false }
tracing = { version = "^0", features = ["log", "attributes"] }
tracing-subscriber = { version = "^0", features = ["env-filter"] }
tracing-appender = "^0"
tracing-opentelemetry = "0.21"
# Buggy: tracing-error = "^0"
opentelemetry = { version = "0.20" }
opentelemetry-otlp = { version = "0.13", default-features = false, optional = true }
opentelemetry-semantic-conventions = "0.12"
async-std = { version = "^1", features = ["unstable"], optional = true }
tokio = { version = "1.35.0", features = ["full", "tracing"], optional = true }
tokio-stream = { version = "0.1.14", features = ["net"], optional = true }
tokio-util = { version = "0.7.10", features = ["compat"], optional = true }
console-subscriber = { version = "^0", optional = true }
async-tungstenite = { package = "veilid-async-tungstenite", version = "^0", features = [
    "async-tls",
] }
color-eyre = { version = "^0", default-features = false }
backtrace = "^0"
clap = { version = "4", features = ["derive", "string", "wrap_help"] }
directories = "^5"
parking_lot = "^0"
config = { version = "^0", features = ["yaml"] }
cfg-if = "^1"
serde = "^1"
serde_derive = "^1"
serde_yaml = "^0"
json = "^0"
futures-util = { version = "^0", default-features = false, features = [
    "alloc",
] }
url = "^2"
ctrlc = "^3"
lazy_static = "^1"
bugsalot = { package = "veilid-bugsalot", version = "0.2.0" }
flume = { version = "^0", features = ["async"] }
rpassword = "^7"
hostname = "^0"
stop-token = { version = "^0", default-features = false }
sysinfo = { version = "^0.30.6" }
wg = "0.3.2"

[target.'cfg(windows)'.dependencies]
windows-service = "^0"
ansi_term = "^0"

[target.'cfg(unix)'.dependencies]
daemonize = "^0"
signal-hook = "^0"
signal-hook-async-std = "^0"
nix = "^0"

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "^0"

[dev-dependencies]
serial_test = "^2"
